# mramor-and-granit

./: .env.docker  .gitignore  DOCKER.md  README.md  SECURITY.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/src/: config.py  dependencies.py  main.py
backend/src/models/: __init__.py  base.py  callback.py  categories.py  products.py  users.py
backend/src/repository/: callback.py  categories.py  products.py  users.py
backend/src/routes/: __init__.py  auth.py  callback.py  categories.py  products.py
backend/src/schemas/: callback.py  categories.py  products.py  users.py
backend/src/service/: auth.py  callback.py  categories.py  products.py
backend/src/utils/: connect.py  repository.py  tg_sender.py  unit_of_work.py  utils.py
frontend/: .dockerignore  Dockerfile  middleware.ts  next.config.ts  package-lock.json  package.json
frontend/api/: auth.ts  axiosInstance.ts  callback.api.ts
frontend/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/app/(public)/: layout.tsx
frontend/components/about/: about-advatages.tsx  about.tsx  serv-items-about.ts  usServices.tsx
frontend/components/admin/: dashboard.tsx  sidebar.tsx
frontend/components/examples/: vk.tsx  (+2 more)
frontend/hooks/: useCallbackForm.ts  useCallbacks.ts  useCategories.ts  useIsMobile.ts  useProduct.ts  useYandexMap.ts
frontend/schemes/: callback.schema.ts
frontend/types/: auth.ts  callback.ts  category.ts  filters.ts  product.ts
frontend/utils/: filterProducts.ts  mapCategories.ts  prodView.ts  searchIndex.ts  searchProducts.ts  trigrams.ts
(+31 files in other folders)
